# datastar-python

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  sdk-test.py
.github/workflows/: pre-commit.yaml  sdk-adr.yaml
examples/: README.md  pyproject.toml
examples/django/: README.md  pyproject.toml
examples/django/datastar/: asgi.py  settings.py  urls.py  wsgi.py
examples/django/ds/: views.py
examples/fastapi/: app.py
examples/fasthtml/: advanced.py  simple.py
examples/litestar/: app.py
examples/quart/: app.py
examples/sanic/: app.py
src/datastar_py/: __about__.py  __init__.py  attributes.py  consts.py  django.py  fastapi.py  fasthtml.py  litestar.py  quart.py  responses.py  sanic.py  sse.py  starlette.py
src/datastar_py/attributes/: __init__.py  actions.py
tests/: test_datastar_decorator_runtime.py  test_decorator_matrix.py  test_fastapi_decorator_integration.py  test_fasthtml_decorator_integration.py  test_litestar_decorator_integration.py  test_starlette_decorator_integration.py
