[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "datastar-py"
version = "0.6.3"
description = "Helper functions and classes for the Datastar library (https://data-star.dev/)"
readme = "README.md"
keywords = [
  "datastar",
  "django",
  "fastapi",
  "fasthtml",
  "flask",
  "html",
  "litestar",
  "quart",
  "sanic",
  "starlette",
]
license = "MIT"
license-files = [ "LICENSE.md" ]
authors = [
  { name = "Felix Ingram", email = "f.ingram@gmail.com" },
  { name = "Lucian Knock", email = "git@lucianknock.com" },
  { name = "Chase Sterling", email = "chase.sterling@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [  ]
urls.Documentation = "https://github.com/starfederation/datastar-python/blob/develop/README.md"
urls.GitHub = "https://github.com/starfederation/datastar-python"

[dependency-groups]
dev = [ "pre-commit>=4.2" ]

[tool.ruff]
line-length = 99
lint.select = [
  # Annotations
  "ANN",
  # flake8-bugbear
  "B",
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # isort
  "I",
  # Ruff specific
  "RUF",
  # flake8-simplify
  "SIM",
  # pyupgrade
  "UP",
]
lint.ignore = [ "E501" ]
lint.fixable = [ "ALL" ]

per-file-ignores."examples/**/*.py" = [ "ANN" ]
