[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "datastar-py"
version = "1.0.0"
description = "Helper functions and classes for the Datastar library (https://data-star.dev/)"
readme = "README.md"
keywords = [
  "datastar",
  "django",
  "fastapi",
  "fasthtml",
  "flask",
  "html",
  "litestar",
  "quart",
  "sanic",
  "starlette",
]
license = "MIT"
license-files = [ "LICENSE.md" ]
authors = [
  { name = "Felix Ingram", email = "f.ingram@gmail.com" },
  { name = "Lucian Knock", email = "git@lucianknock.com" },
  { name = "Chase Sterling", email = "chase.sterling@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = []
urls.Documentation = "https://github.com/starfederation/datastar-python/blob/develop/README.md"
urls.GitHub = "https://github.com/starfederation/datastar-python"

[dependency-groups]
dev = [
  "django>=4.2.23",
  "fastapi>=0.116.1",
  "httpx>=0.27",
  "litestar>=2.17",
  "pre-commit>=4.2",
  "python-fasthtml>=0.12.25; python_full_version>='3.10'",
  "quart>=0.20",
  "sanic>=25.3",
  "starlette>=0.47.3",
  "uvicorn>=0.30",
]

[tool.ruff]
line-length = 99
lint.select = [
  "ANN",  # annotations
  "B",    # flake8-bugbear
  "D",    # pydocstyle
  "DTZ",  # flake8-datetimez
  "E",    # pycodestyle
  "F",    # Pyflakes
  "FURB", # refurb
  "I",    # isort
  "PL",   # Pylint
  "PYI",  # flake8-pyi
  "RUF",  # Ruff-specific rules
  "SIM",  # flake8-simplify
  "SLOT", # flake8-slots
  "UP",   # pyupgrade
]
lint.ignore = [
  "D100", # undocumented-public-module
  "D101", # undocumented-public-class
  "D102", # undocumented-public-method
  "D103", # undocumented-public-function
  "D104", # undocumented-public-package
  "D107", # undocumented-public-init
  "D203", # Conflicting with other rules
  "D213", # Conflicting with other rules
  "D401", # non-imperative-mood
  "D415", # Duplicate of D400
  "E501",
]
lint.per-file-ignores."examples/**/*.py" = [ "ANN", "DTZ005", "PLC0415" ]
lint.fixable = [ "ALL" ]
lint.pylint.allow-magic-value-types = [ "int", "str" ]
